--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
 					<li><a class="active" href="services.html"><span>Categorías</span></a></li>
 					<li><a href="login.html"><span>Iniciar Sesión</span></a></li>
 					<!-- <li><a href="single-post.html"><span>Single Post</span></a></li> -->
-					<li><a href="formularioDenuncia.html"><span>Nueva Denuncia</span></a></li>
+					<!-- <li><a href="formularioDenuncia.html"><span>Nueva Denuncia</span></a></li> -->
 					<li><a href="contact.html"><span>Contáctenos</span></a></li>
 				</ul>					
 			</div>
