--- a/login.html
+++ b/login.html
@@ -20,7 +20,6 @@
 	<link rel="stylesheet" type="text/css" href="css/flexslider.css" media="screen">
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="screen">
 	<link rel="stylesheet" type="text/css" href="css/responsive.css" media="screen">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap-layout.css" media="screen">
 	
 </head>
 <body>
@@ -51,15 +50,7 @@
 				<ul class="menu">
 					<li><a href="index.html"><span>Inicio</span></a></li>
 					<li><a href="about.html"><span>Quienes Somos</span></a></li>
-					<li ><a href="#" data-toggle="sidebar-collapse"><span>Categorías</span></a>
-                        <ul class="sidebar-submenu">
-                            <li class="sidebar-menu-item"><a href="index.html" class="sidebar-menu-button">Ver Todas</a></li>
-                        <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Robos</a></li>
-                        <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Accidentes</a></li>
-                            <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Malos Servicios</a></li>
-                        <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Calles Destruidas</a></li>
-    </ul>                             
-                    </li>
+					<li><a href="services.html"><span>Categorias</span></a></li>
 					<li><a class="active" href="login.html"><span>Iniciar Sesión</span></a></li>
 					<li><a  href="contact.html"><span>Contáctenos</span></a></li>
 				</ul>					
@@ -121,11 +112,7 @@
                                     <p>
                                     
                                     </p>
-<<<<<<< HEAD
-                                <p>Si no tienes cuenta, <a href="#">Regístrate</a></p>
-=======
                                 <p>Si no tienes cuenta, <a href="signup.php">Regístrate</a></p>
->>>>>>> master
 								<div id="msg" class="message"></div>
                                     </center>
 														</div>
@@ -154,7 +141,6 @@
 	<script type="text/javascript" src="js/retina-1.1.0.min.js"></script>
 	<script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
-	<script type="text/javascript" src="js/bootstrap-layout.js"></script>
 
 
 </body>
