--- a/index.html
+++ b/index.html
@@ -49,15 +49,7 @@
 				<ul class="menu">
 					<li><a class="active" href="index.html"><span>Inicio</span></a></li>
 					<li><a href="about.html"><span>Quienes Somos</span></a></li>
-					<li ><a href="#" data-toggle="sidebar-collapse"><span>Categorías</span></a>
-                        <ul class="sidebar-submenu">
-                            <li class="sidebar-menu-item"><a href="index.html" class="sidebar-menu-button">Ver Todas</a></li>
-                        <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Robos</a></li>
-                        <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Accidentes</a></li>
-                            <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Malos Servicios</a></li>
-                        <li class="sidebar-menu-item"><a href="blog.html" class="sidebar-menu-button">Calles Destruidas</a></li>
-    </ul>                             
-                    </li>
+					<li><a href="services.html"><span>Categorias</span></a></li>
 					<li><a href="login.html"><span>Iniciar Sesión</span></a></li>
 					<li><a href="contact.html"><span>Contáctenos</span></a></li>
 				</ul>					
@@ -106,7 +98,7 @@
 
 						<div class="project-post">
 							<div class="view view-first">
-			                    <img class="imgDenu" src="images/denu2.jpg" alt="" />
+			                    <img class="imgDenu"src="images/denu2.jpg" alt="" />
 			                    <div class="mask">
 			                    	<div class="top-post">
 				                        <h2>Creative Wallpaper</h2>
